--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<!--copyright-->
 	<div class="copy-wthree">
 		<p>© 2018 MaProD login Page . All Rights Reserved | Design by
-			<a href="http://w3layouts.com/" target="_blank">DSC Club Murang'a</a>
+			<a href="#" target="_blank">DSC Club Murang'a</a>
 		</p>
 	</div>
 	<!--//copyright-->
